--- a/.github/workflows/bedrock-pr-apply.yml
+++ b/.github/workflows/bedrock-pr-apply.yml
@@ -18,6 +18,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
+      - name: Checkout repository snapshot
+        if: env.ACT != 'true'
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          token: ${{ secrets.GITHUB_TOKEN || env.ACT_GITHUB_TOKEN || 'local-test-token' }}
       - name: Resolve PR context
         id: ctx
         uses: actions/github-script@v7
