--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "**/tests/**/*.test.js"
     ],
     "collectCoverageFrom": [
-      "scripts/**/*.js"
+      ".github/scripts/**/*.js"
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/tests/setup.js"
